adding folder and portal page

--- a/DES157A/index.html
+++ b/DES157A/index.html
@@ -7,6 +7,6 @@
     <title>DES157A | Das' Portal Page </title>
 </head>
 <body>
-    <h1>Hi</h1>
+    <h1>Hi This is the portal page. Working in Progress!</h1>
 </body>
 </html>
