portal page ver1 oct 3rd

--- a/des157a/index.html
+++ b/des157a/index.html
@@ -5,70 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Stick+No+Bills:wght@200;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>DES157A | Das' Portal Page </title>
 </head>
 <body>
-    <header>
-        <h2>DES 157 - INTERACTIVE MEDIA II - FALL 2021</h2>
-        <h1>DAS LIAO</h1>
-        <div id="banner">
-            <div id="ban-inner-1">
-                <div id="ban-inner-2">
-                    <div id="ban-inner-3">
-                        <div id="ban-inner-4">
-                            <div id="ban-inner-5">
-                                <div id="ban-inner-6"></div>
+    <div id="container">
+        <header>
+            <section id="header-text">
+                <h2 id="course-name"><span id="des157a">DES 157A <div id="course-name-bar-1"></div></span><span>INTERACTIVE MEDIA II</span><span id="fall2021">FALL 2021 <div id="course-name-bar-2"></div></span></h2>
+                <h1><span id="das">DAS</span><span id="liao">LIAO</span></h1>
+            </section>
+            <div id="banner">
+                <div id="ban-inner-1">
+                    <div id="ban-inner-2">
+                        <div id="ban-inner-3">
+                            <div id="ban-inner-4">
+                                <div id="ban-inner-5">
+                                    <div id="ban-inner-6"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </header>
-    <main>
-        <section id="col1">
-            <h2>Studios</h2>
-            <ul>
-                <li><a href="">Mad Libs 2.0</a></li>
-                <li><a href="">Every Picture</a></li>
-                <li><a href="">Game On!</a></li>
-            </ul>
+        </header>
 
-            <h2>Experiments</h2>
-            <ul>
-                <li>Exp 1</li>
-            </ul>
+        <main>
+            <section id="col1">
+                <h2>Studios</h2>
+                <ul id="col1-studios">
+                    <li><a class="link-name" href="">Mad Libs 2.0</a><a class="link-arrows" href="">></a></li>
+                    <li><a class="link-name" href="">Every Picture</a><a class="link-arrows" href="">></a></li>
+                    <li><a class="link-name" href="">Game On!</a><a class="link-arrows" href="">></a></li>
+                </ul>
 
-            <h2>Writing</h2>
-            <ul>
-                <li>Learning Journal</li>
-            </ul>
-        </section>
-        <section id="col2">
-            <h2>R & D</h2>
-            <ul>
-                <li><a href="">Project Brief</a></li>
-                <li><a href="">Digital Comp</a></li>
-                <li><a href="">Refined Comp</a></li>
-                <li><a href="">Prototype 1</a></li>
-                <li><a href="">User Test</a></li>
-                <li><a href="">User Test Results</a></li>
-            </ul>
-        </section>
-        <section id="col3">
-            <h2>Final</h2>
-            <ul>
-                <li><a href="">Final Project</a></li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <a href="mailto:&#098;&#117;&#102;&#102;&#101;&#114;&#045;&#100;&#101;&#098;&#116;&#111;&#114;&#046;&#048;&#064;&#105;&#099;&#108;&#111;&#117;&#100;&#046;&#099;&#111;&#109;">&#098;&#117;&#102;&#102;&#101;&#114;&#045;&#100;&#101;&#098;&#116;&#111;&#114;&#046;&#048;&#064;&#105;&#099;&#108;&#111;&#117;&#100;&#046;&#099;&#111;&#109;</a>
-        <a href="https://validator.w3.org/check?uri=https://yourusername.github.io/des157">Valid HTML 5</a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
-    </footer>
-    
+                <h2>Experiments</h2>
+                <ul id="col1-experiments">
+                    <li><a class="link-name" href="">Exp 1</a><a class="link-arrows" href="">></a></li>
+                </ul>
+
+                <h2>Writing</h2>
+                <ul id="col1-writing">
+                    <li><a class="link-name" href="">Learning Journal</a><a class="link-arrows" href="">></a></li>
+                </ul>
+            </section>
+            <section id="col2">
+                <h2>R & D</h2>
+                <ul>
+                    <li><a class="link-name" href="">Project Brief span</a><a class="link-arrows" href="">></a></li>
+                    <li><a class="link-name" href="">Digital Comp</a><a class="link-arrows" href="">></a></li>
+                    <li><a class="link-name" href="">Refined Comp</a><a class="link-arrows" href="">></a></li>
+                    <li><a class="link-name" href="">Prototype 1</a><a class="link-arrows" href="">></a></li>
+                    <li><a class="link-name" href="">User Test</a><a class="link-arrows" href="">></a></li>
+                    <li><a class="link-name" href="">User Test Results</a><a class="link-arrows" href="">></a></li>
+                </ul>
+            </section>
+            <section id="col3">
+                <h2>Final</h2>
+                <ul>
+                    <li><a class="link-name" href="">Final Project</a><a class="link-arrows" href="">></a></li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+            <a href="mailto:&#098;&#117;&#102;&#102;&#101;&#114;&#045;&#100;&#101;&#098;&#116;&#111;&#114;&#046;&#048;&#064;&#105;&#099;&#108;&#111;&#117;&#100;&#046;&#099;&#111;&#109;">Email</a>
+            <a href="https://validator.w3.org/check?uri=https://yourusername.github.io/des157">Valid HTML 5</a>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
+        </footer>
+    </div>
 </body>
 </html>
