--- a/des157a/index.html
+++ b/des157a/index.html
@@ -72,7 +72,7 @@
         </main>
         <footer>
             <a href="mailto:&#098;&#117;&#102;&#102;&#101;&#114;&#045;&#100;&#101;&#098;&#116;&#111;&#114;&#046;&#048;&#064;&#105;&#099;&#108;&#111;&#117;&#100;&#046;&#099;&#111;&#109;">Email</a>
-            <a href="https://validator.w3.org/check?uri=https://dasliao.github.io/des157">Valid HTML 5</a>
+            <a href="https://validator.w3.org/check?uri=https://dasliao.github.io/des157a">Valid HTML 5</a>
             <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
         </footer>
     </div>
