portal page ver1 oct 3rd

--- a/des157a/index.html
+++ b/des157a/index.html
@@ -15,7 +15,7 @@
     <div id="container">
         <header>
             <section id="header-text">
-                <h2 id="course-name"><span id="des157a">DES 157A <div id="course-name-bar-1"></div></span><span>INTERACTIVE MEDIA II</span><span id="fall2021">FALL 2021 <div id="course-name-bar-2"></div></span></h2>
+                <h2 id="course-name"><span id="des157a">DES 157A <span id="course-name-bar-1"></span></span><span>INTERACTIVE MEDIA II</span><span id="fall2021">FALL 2021 <span id="course-name-bar-2"></span></span></h2>
                 <h1><span id="das">DAS</span><span id="liao">LIAO</span></h1>
             </section>
             <div id="banner">
