portal v1 after cretique, detail changes

--- a/des157a/index.html
+++ b/des157a/index.html
@@ -55,7 +55,7 @@
             <section id="col2">
                 <h3>R & D</h3>
                 <ul>
-                    <li><a class="link-name" href="">Project Brief span</a><a class="link-arrows" href="">></a></li>
+                    <li><a class="link-name" href="">Project Brief</a><a class="link-arrows" href="">></a></li>
                     <li><a class="link-name" href="">Digital Comp</a><a class="link-arrows" href="">></a></li>
                     <li><a class="link-name" href="">Refined Comp</a><a class="link-arrows" href="">></a></li>
                     <li><a class="link-name" href="">Prototype 1</a><a class="link-arrows" href="">></a></li>
@@ -64,7 +64,7 @@
                 </ul>
             </section>
             <section id="col3">
-                <h3>Final</h3>
+                <h3 id="final"><span>Final</span><span id="final-bar"></span></h3>
                 <ul>
                     <li><a class="link-name" href="">Final Project</a><a class="link-arrows" href="">></a></li>
                 </ul>
