--- a/des157a/index.html
+++ b/des157a/index.html
@@ -44,7 +44,7 @@
 
                 <h3>Experiments</h3>
                 <ul id="col1-experiments">
-                    <li><a class="link-name" href="">Exp 1</a><a class="link-arrows" href="">></a></li>
+                    <li><a class="link-name" href="exp/exp1.html">Exp 1</a><a class="link-arrows" href="exp/exp1.html">></a></li>
                 </ul>
 
                 <h3>Writing</h3>
