finished exp2.html

--- a/des157a/index.html
+++ b/des157a/index.html
@@ -25,7 +25,7 @@
                             <div id="ban-inner-4">
                                 <div id="ban-inner-5">
                                     <div id="ban-inner-6"></div>
-                                </div>
+                                </div>90-b
                             </div>
                         </div>
                     </div>
@@ -45,6 +45,7 @@
                 <h3>Experiments</h3>
                 <ul id="col1-experiments">
                     <li><a class="link-name" href="exp/exp1.html">Exp 1</a><a class="link-arrows" href="exp/exp1.html">></a></li>
+                    <li><a class="link-name" href="exp/exp2.html">Exp 2</a><a class="link-arrows" href="exp/exp2.html">></a></li>
                 </ul>
 
                 <h3>Writing</h3>
