fix the bug on Index.html

--- a/des157a/exp/exp2.html
+++ b/des157a/exp/exp2.html
@@ -21,7 +21,7 @@
         */
         var colors = ['blue','red','yellow','orange','pink','green','purple','grey','random'];
         var row = prompt("Let's draw a triangle with *, \nenter the number of row (at least 2):","");
-        var triColor = prompt("Choose the color from \n'blue','red','yellow','orange','pink','green','purple','grey', \nor type 'random' so the program will choose a color for each row!\n Leave it blank for color 'black.'(case sensitive, use lowercase)",'')
+        var triColor = prompt("Choose the color from \n'blue','red','yellow','orange','pink','green','purple','grey', \nor type 'random' so the program will choose a color for each row!\n Leave it blank for color 'black.'\n(case sensitive, use lowercase)",'')
         var myTri = document.querySelector('#triangle');
 
         function formTri(r) {
