--- a/des157a/index.html
+++ b/des157a/index.html
@@ -25,7 +25,7 @@
                             <div id="ban-inner-4">
                                 <div id="ban-inner-5">
                                     <div id="ban-inner-6"></div>
-                                </div>90-b
+                                </div>
                             </div>
                         </div>
                     </div>
