Learning Journal One: Mad Libs update

--- a/des157a/index.html
+++ b/des157a/index.html
@@ -50,7 +50,7 @@
 
                 <h3>Writing</h3>
                 <ul id="col1-writing">
-                    <li><a class="link-name" href="">Learning Journal</a><a class="link-arrows" href="">></a></li>
+                    <li><a class="link-name" href="lj/index.html">Learning Journal</a><a class="link-arrows" href="lj/index.html">></a></li>
                 </ul>
             </section>
             <section id="col2">
