Learning Journal Two Update

--- a/des157a/lj/lj1/index.html
+++ b/des157a/lj/lj1/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Playfair+Display:wght@400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Learning Journal One: Mad Libs 2.0</title>
+    <title>Learning Journal One: Best Practices of Form</title>
 </head>
 <body>
     <div id="container">
@@ -19,7 +19,7 @@
             <div id="form-frame"></div>
         </div>
         <article>
-            <h1>Learning Journal One: Mad Libs 2.0</h1>
+            <h1>Learning Journal One: Best Practices of Form</h1>
             <date>Oct-17-2021</date>
             <section class="paragraphs">
             <p>Filling the form is one of the basic tasks we do on a website, and there are thousands of designs out there. A good form design is not as easy as stacking the labels and text inputters. However, it is also not about adding all the features. After reading the article and compare to my previous experience, I realized that those rules do not limit the design of the form, although they are extremely helpful and useful. Also, a good-looking form doesn't mean a good user experience. A good form design is about the most suitable for that specific form, such as the best place a label, the best way to provide instructions, the best layout to reduce user overload, etc.</p>
