--- a/des157a/index.html
+++ b/des157a/index.html
@@ -50,7 +50,8 @@
 
                 <h3>Writing</h3>
                 <ul id="col1-writing">
-                    <li><a class="link-name" href="lj/index.html">Learning Journal</a><a class="link-arrows" href="lj/index.html">></a></li>
+                    <li><a class="link-name" href="lj/lj2/index.html">Learning Journal Two</a><a class="link-arrows" href="lj/lj2/index.html">></a></li>
+                    <li><a class="link-name" href="lj/lj1/index.html">Learning Journal One</a><a class="link-arrows" href="lj/lj1/index.html">></a></li>
                 </ul>
             </section>
             <section id="col2">
