mad libs update

--- a/des157a/index.html
+++ b/des157a/index.html
@@ -39,7 +39,7 @@
                 <ul id="col1-studios">
                     <li><a class="link-name" href="studios/mad-libs/">Mad Libs 2.0</a><a class="link-arrows" href="studios/mad-libs/">></a></li>
                     <li><a class="link-name" href="">Every Picture</a><a class="link-arrows" href="">></a></li>
-                    <li><a class="link-name" href="">Game On!</a><a class="link-arrows" githref="">></a></li>
+                    <li><a class="link-name" href="">Game On!</a><a class="link-arrows" href="">></a></li>
                 </ul>
 
                 <h3>Experiments</h3>
