--- a/des157a/studios/mad-libs/index.html
+++ b/des157a/studios/mad-libs/index.html
@@ -21,47 +21,47 @@
                 <form id="my-form">
                     <div id="company" class="input-area">
                         <input type="text" name="company" id="company-input" class="input-area-boxes" required>
-                        <label for="company-input" id="company-label" class="input-area-labels" class='label-inactive'>A COMPANY NAME</label>
+                        <label for="company-input" id="company-label" class="input-area-labels">A COMPANY NAME</label>
                     </div> 
 
                     <div id="place" class="input-area">
                         <input type="text" name="place" id="place-input" class="input-area-boxes" required>
-                        <label for="place-input" id="place-label" class="input-area-labels" class='label-inactive'>A PLACE</label>
+                        <label for="place-input" id="place-label" class="input-area-labels">A PLACE</label>
                     </div> 
 
                     <div id="year" class="input-area">
                         <input type="text" name="cyear" id="year-input" class="input-area-boxes" required>
-                        <label for="year-input" id="year-label" class="input-area-labels" class='label-inactive'>A YEAR</label>
+                        <label for="year-input" id="year-label" class="input-area-labels">A YEAR</label>
                     </div> 
 
                     <div id="name-of-person" class="input-area">
                         <input type="text" name="name" id="name-of-person-input" class="input-area-boxes" required>
-                        <label for="name-of-person-input" id="name-of-person-label" class="input-area-labels" class='label-inactive'>A NAME OF A PERSON</label>
+                        <label for="name-of-person-input" id="name-of-person-label" class="input-area-labels">A NAME OF A PERSON</label>
                     </div> 
 
                     <div id="noun1" class="input-area">
                         <input type="text" name="noun1" id="noun1-input" class="input-area-boxes" required>
-                        <label for="noun1-input" id="noun1-label" class="input-area-labels" class='label-inactive'>A NOUN</label>
+                        <label for="noun1-input" id="noun1-label" class="input-area-labels" >A NOUN</label>
                     </div> 
 
                     <div id="verb" class="input-area">
                         <input type="text" name="verb" id="verb-input" class="input-area-boxes" required>
-                        <label for="verb-input" id="verb-label" class="input-area-labels" class='label-inactive'>A VERB</label>
+                        <label for="verb-input" id="verb-label" class="input-area-labels" >A VERB</label>
                     </div> 
 
                     <div id="adj1" class="input-area">
                         <input type="text" name="adj1" id="adj1-input" class="input-area-boxes" required>
-                        <label for="adj1-input" id="adj1-label" class="input-area-labels" class='label-inactive'>A ADJECTIVE</label>
+                        <label for="adj1-input" id="adj1-label" class="input-area-labels"  >A ADJECTIVE</label>
                     </div> 
 
                     <div id="adj2" class="input-area">
                         <input type="text" name="adj2" id="adj2-input" class="input-area-boxes" required>
-                        <label for="adj2-input" id="adj2-label" class="input-area-labels" class='label-inactive'>ANOTHER ADJECTIVE</label>
+                        <label for="adj2-input" id="adj2-label" class="input-area-labels"  >ANOTHER ADJECTIVE</label>
                     </div> 
 
                     <div id="noun2" class="input-area">
                         <input type="text" name="noun2" id="noun2-input" class="input-area-boxes" required>
-                        <label for="noun2-input" id="noun2-label" class="input-area-labels" class='label-inactive'>ONE MORE NOUN</label>
+                        <label for="noun2-input" id="noun2-label" class="input-area-labels"  >ONE MORE NOUN</label>
                     </div>
 
                 </form>
@@ -89,8 +89,8 @@
                 </section>
             </div>
             <nav>
-                <button type="button" id="back-btn">< BACK</button>
-                <button type="button" id="next-btn">NEXT ></button>
+                <button type="button" id="back-btn">&lt BACK</button>
+                <button type="button" id="next-btn">NEXT &rt</button>
             </nav>
             <section id="error-message">
                 <p>Cannot Continue!!!</p>
@@ -113,7 +113,7 @@
         </article>
         <footer class="footer-hori">
             <a href="mailto:&#098;&#117;&#102;&#102;&#101;&#114;&#045;&#100;&#101;&#098;&#116;&#111;&#114;&#046;&#048;&#064;&#105;&#099;&#108;&#111;&#117;&#100;&#046;&#099;&#111;&#109;">Email</a>
-            <a href="https://validator.w3.org/check?uri=https://dasliao.github.io/des157a">Valid HTML 5</a>
+            <a href="https://validator.w3.org/check?uri=https://dasliao.github.io/des157a/studios/mad-libs/">Valid HTML 5</a>
             <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
         </footer>
     </div>
