--- a/des157a/studios/mad-libs/index.html
+++ b/des157a/studios/mad-libs/index.html
@@ -41,27 +41,27 @@
 
                     <div id="noun1" class="input-area">
                         <input type="text" name="noun1" id="noun1-input" class="input-area-boxes" required>
-                        <label for="noun1-input" id="noun1-label" class="input-area-labels" >A NOUN</label>
+                        <label for="noun1-input" id="noun1-label" class="input-area-labels">A NOUN</label>
                     </div> 
 
                     <div id="verb" class="input-area">
                         <input type="text" name="verb" id="verb-input" class="input-area-boxes" required>
-                        <label for="verb-input" id="verb-label" class="input-area-labels" >A VERB</label>
+                        <label for="verb-input" id="verb-label" class="input-area-labels">A VERB</label>
                     </div> 
 
                     <div id="adj1" class="input-area">
                         <input type="text" name="adj1" id="adj1-input" class="input-area-boxes" required>
-                        <label for="adj1-input" id="adj1-label" class="input-area-labels"  >A ADJECTIVE</label>
+                        <label for="adj1-input" id="adj1-label" class="input-area-labels">A ADJECTIVE</label>
                     </div> 
 
                     <div id="adj2" class="input-area">
                         <input type="text" name="adj2" id="adj2-input" class="input-area-boxes" required>
-                        <label for="adj2-input" id="adj2-label" class="input-area-labels"  >ANOTHER ADJECTIVE</label>
+                        <label for="adj2-input" id="adj2-label" class="input-area-labels" >ANOTHER ADJECTIVE</label>
                     </div> 
 
                     <div id="noun2" class="input-area">
                         <input type="text" name="noun2" id="noun2-input" class="input-area-boxes" required>
-                        <label for="noun2-input" id="noun2-label" class="input-area-labels"  >ONE MORE NOUN</label>
+                        <label for="noun2-input" id="noun2-label" class="input-area-labels">ONE MORE NOUN</label>
                     </div>
 
                 </form>
@@ -90,7 +90,7 @@
             </div>
             <nav>
                 <button type="button" id="back-btn">&lt BACK</button>
-                <button type="button" id="next-btn">NEXT &rt</button>
+                <button type="button" id="next-btn">NEXT &gt</button>
             </nav>
             <section id="error-message">
                 <p>Cannot Continue!!!</p>
