--- a/des157a/lj/lj3/index.html
+++ b/des157a/lj/lj3/index.html
@@ -14,7 +14,13 @@
 <body>
     <div id="container">
         <div id="banner">
-            <div id="overlay"></div>
+            <div id="imgs">
+                <div id="img-1"></div>
+                <div id="img-2"></div>
+                <div id="img-3"></div>
+                <div id="img-4"></div>
+                <div id="img-5"></div>
+            </div>
         </div>
         <article>
             <h1>Learning Journal Three: Every Picture</h1>
