--- a/des157a/lj/lj3/index.html
+++ b/des157a/lj/lj3/index.html
@@ -26,7 +26,8 @@
             <h1>Learning Journal Three: Every Picture</h1>
             <date>Oct-27-2021</date>
             <section class="paragraphs">
-            <p>Those visual thinking skills   introduced a brand new way of reviewing photos. I was surprised how many detailed story you can find from a single new photo. The open-ended questions are the fastest way to improved our views of an image. Zooming in, knowing more about the background or other cultures makes a huge difference of what information you are getting, such as the photo took by Mohammed Salem/Reuters. My first glance of this image is that this guys was doing a flip in an abandoned place. Looking closer, I found out there are fires, and all the buildings are clapped, so this might be a war zone. Then the meaning behind the flip is suddenly different from my point of view. Is the pain facial expression mainly because how hard is the flip? or is it because he was struggling, and sad about what just happened of his home?</p>
+            <p>Those visual thinking skills introduced a brand new way of reviewing photos. I was surprised by how many detailed stories you can find from a single new photo. Open-ended questions are the fastest way to improve our views of an image. Zooming in, learning more about the background of other cultures makes a considerable difference in what information you are getting.</p>
+            <p>For example, the photo taken by Mohammed Salem/Reuters. My first glance at this image is that this guy was doing a flip in an abandoned place. Looking closer, I found out there were fires, and all the buildings had clapped, so this might be a war zone. Then the meaning behind the flip is suddenly different from my point of view. Is the pain facial expression mainly because of how complex the flip is, or is he struggling and sad about what just happened in his home?</p>
             </section>
             
         </article>
