updated mad libs

--- a/des157a/studios/mad-libs/index.html
+++ b/des157a/studios/mad-libs/index.html
@@ -89,12 +89,12 @@
                 </section>
             </div>
             <nav>
-                <button type="button" id="back-btn">&lt BACK</button>
-                <button type="button" id="next-btn">NEXT &gt</button>
+                <button type="button" id="back-btn">&lt&ampBACK</button>
+                <button type="button" id="next-btn">NEXT&amp&gt</button>
             </nav>
             <section id="error-message">
-                <p>Cannot Continue!!!</p>
-                <p>Please Fill Out the Form!</p>
+                <p>Please Complete the </p>
+                <p>form to Continue!</p>
             </section>
         </main>
         <section id="scroll-sign">
