update mad libs

--- a/des157a/studios/mad-libs/index.html
+++ b/des157a/studios/mad-libs/index.html
@@ -89,8 +89,8 @@
                 </section>
             </div>
             <nav>
-                <button type="button" id="back-btn">&lt&ampBACK</button>
-                <button type="button" id="next-btn">NEXT&amp&gt</button>
+                <button type="button" id="back-btn">&lt; BACK</button>
+                <button type="button" id="next-btn">NEXT &gt;</button>
             </nav>
             <section id="error-message">
                 <p>Please Complete the </p>
