--- a/des157a/index.html
+++ b/des157a/index.html
@@ -50,6 +50,7 @@
 
                 <h3>Writing</h3>
                 <ul id="col1-writing">
+                    <li><a class="link-name" href="lj/lj4/index.html">Learning Journal Four</a><a class="link-arrows" href="lj/lj4/index.html">></a></li>
                     <li><a class="link-name" href="lj/lj3/index.html">Learning Journal Three</a><a class="link-arrows" href="lj/lj3/index.html">></a></li>
                     <li><a class="link-name" href="lj/lj2/index.html">Learning Journal Two</a><a class="link-arrows" href="lj/lj2/index.html">></a></li>
                     <li><a class="link-name" href="lj/lj1/index.html">Learning Journal One</a><a class="link-arrows" href="lj/lj1/index.html">></a></li>
