--- a/des157a/lj/lj4/index.html
+++ b/des157a/lj/lj4/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Playfair+Display:wght@400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Learning Journal Four: Every Picture</title>
+    <title>Learning Journal Four: Visual Thinking Analysis</title>
 </head>
 <body>
     <div id="container">
@@ -23,7 +23,7 @@
             </div>
         </div>
         <article>
-            <h1>Learning Journal Four: Every Picture</h1>
+            <h1>Learning Journal Four: Visual Thinking Analysis</h1>
             <date>Nov-01-2021</date>
             <section class="paragraphs">
                 <div>
