--- a/des157a/studios/every-pictrue/index.html
+++ b/des157a/studios/every-pictrue/index.html
@@ -5,58 +5,112 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="smoothscroll.js"></script>
     <script src="script.js" defer></script>
     <title>Every Picture: MU</title>
 </head>
 <body>
-    <div id="container">
-        <img src="images/mu-top.jpg" id="mu-top" alt="mu-top" class='start'>
-        <div id="svg-container">
-            <?xml version="1.0" encoding="utf-8"?>
-            <!-- Generator: Adobe Illustrator 26.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-            <svg version="1.1" id="mu-trace" class="start" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1366 768" style="enable-background:new 0 0 1366 768;" xml:space="preserve">
-            <path id="t-island-top" class="st0" d="M313.7,167.2c0,0,684.2,0,745.3,0c61,0,66.9,40.2,66.9,72.6c0,66.7-50.4,101-100.4,101
-                s-110.4,0-110.4,0l-32.5,26.5l-162.8-16l-24.5,21.2c0,0-327.5,0-389.4,0c-64.8,0-103.1-45.4-103.1-112.1
-                C202.8,184.9,260.7,167.2,313.7,167.2z"/>
-            <path id="t-island-middle" class="st0" d="M314.6,479.1c0,0,327.6-1.1,362.9,0c30.4,1,60.8,9.8,87.3,19.6
-                c26.5,9.8,58.9,21.6,81.4,17.7c22.6-3.9,154.1-26.5,170.7-29.4c16.7-2.9,19.9,4.7,21.2,11.2c1.4,6.5,2.3,16.3-12.5,19
-                c-17.8,3.3-155.9,29.6-155.9,29.6s-12.8,2.9-26.5,2.9c-26.5,0-525.8-2-525.8-2s-32.4,1-32.2-33.4
-                C285.5,479.1,314.6,479.1,314.6,479.1z"/>
-            <path id="t-curb-bottom" class="st0" d="M1113.1,767.5c0,0,0-4.9,0-18.6
-                s0-38.3-30.3-38.3c-35.2,0-685.8-2.6-809.4,0c-134.9,2.8-162-103.9-162-182.2c0-110.8,0.2-155.7,0.2-155.7s0-5.4,0-9.6
-                s-1-12.9-16.2-12.9H0V768L1113.1,767.5z"/>
-            <path id="bus-g" class="st1" d="M433.4,411.6H291.2c-2.7,0-4.9-2.2-4.9-4.9v-22.6c0-2.7,2.2-4.9,4.9-4.9h142.3
-                c2.7,0,4.9,2.2,4.9,4.9v22.6C438.3,409.4,436.1,411.6,433.4,411.6z"/>
-            <path id="bus-b" class="st1" d="M620.8,411.6H478.5c-2.7,0-4.9-2.2-4.9-4.9v-22.6c0-2.7,2.2-4.9,4.9-4.9h142.3
-                c2.7,0,4.9,2.2,4.9,4.9v22.6C625.7,409.4,623.5,411.6,620.8,411.6z"/>
-            <path id="bus-p" class="st1" d="M1026.7,159.4H884.4c-2.7,0-4.9-2.2-4.9-4.9
-                v-22.6c0-2.7,2.2-4.9,4.9-4.9h142.3c2.7,0,4.9,2.2,4.9,4.9v22.6C1031.6,157.3,1029.4,159.4,1026.7,159.4z"/>
-            <path id="bus-z" class="st1" d="M510.9,159.4H368.6c-2.7,0-4.9-2.2-4.9-4.9v-22.6c0-2.7,2.2-4.9,4.9-4.9h142.3
-                c2.7,0,4.9,2.2,4.9,4.9v22.6C515.7,157.3,513.6,159.4,510.9,159.4z"/>
-            <path id="bus-q" class="st1" d="M847.9,159.7L706,149.3c-2.7-0.2-4.7-2.5-4.5-5.2l1.6-22.5c0.2-2.7,2.5-4.7,5.2-4.5l141.9,10.4
-                c2.7,0.2,4.7,2.5,4.5,5.2l-1.6,22.5C852.9,157.9,850.6,159.9,847.9,159.7z"/>
-            <path id="bus-e" class="st1" d="M1034.6,555.3L895,582.8c-2.6,0.5-5.2-1.2-5.7-3.8l-4.4-22.2c-0.5-2.6,1.2-5.2,3.8-5.7l139.6-27.5
-                c2.6-0.5,5.2,1.2,5.7,3.8l4.4,22.2C1039,552.2,1037.2,554.7,1034.6,555.3z"/>
-            <path id="bus-m" class="st1" d="M462.9,592H320.7c-2.7,0-4.9-2.2-4.9-4.9v-22.6c0-2.7,2.2-4.9,4.9-4.9H463c2.7,0,4.9,2.2,4.9,4.9
-                v22.6C467.8,589.8,465.6,592,462.9,592z"/>
-            <path id="bus-k" class="st1" d="M643.6,595l-142.2-6c-2.7-0.1-4.8-2.4-4.7-5.1l0.9-22.6c0.1-2.7,2.4-4.8,5.1-4.7l142.2,5.9
-                c2.7,0.1,4.8,2.4,4.7,5.1l-0.9,22.6C648.6,593,646.3,595.1,643.6,595z"/>
-            <path id="bus-trip-1" class="st1" d="M377.5,700.8H235.2
-                c-2.7,0-4.9-2.2-4.9-4.9v-22.6c0-2.7,2.2-4.9,4.9-4.9h142.3c2.7,0,4.9,2.2,4.9,4.9V696C382.3,698.7,380.1,700.8,377.5,700.8z"/>
-            <path id="bus-trip-2" class="st1" d="M570,700.8H427.7c-2.7,0-4.9-2.2-4.9-4.9
-                v-22.6c0-2.7,2.2-4.9,4.9-4.9H570c2.7,0,4.9,2.2,4.9,4.9V696C574.9,698.7,572.7,700.8,570,700.8z"/>
-            <path id="bus-trip-3" class="st1" d="M830.7,702.8H688.4c-2.7,0-4.9-2.2-4.9-4.9v-22.6c0-2.7,2.2-4.9,4.9-4.9h142.3
-                c2.7,0,4.9,2.2,4.9,4.9V698C835.6,700.7,833.4,702.8,830.7,702.8z"/>
-            <path id="t-curb-right" class="st0" d="M1366,768l-0.5-567.4
-                c-100,0-166,33.9-166,141.9c0,124.6,0,425.5,0,425.5H1366z"/>
-            <path id="t-curb-top" class="st0" d="M0,294.7h113.8
-                c0-151.2,8.7-235.2,201.7-235.2c141.7,0,744-0.2,744-0.2c123,0,133.7-59.3,133.7-59.3H0V294.7z"/>
+    <main id="container">
+        <div id="mu-container" class="mu-on-start">
+            <img src="images/mu-day.jpg" id="mu-top" alt="mu-top" class='start'>
+            <div id="svg-container"> 
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 25.4.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg version="1.1" id="mu-trace" class='start' xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 1366 1023" style="enable-background:new 0 0 1366 1023;" xml:space="preserve">
+                <path id="t-island-top" class="st0" d="M313.7,340.2c0,0,684.2,0,745.3,0c61,0,66.9,40.2,66.9,72.6c0,66.7-50.4,101-100.4,101
+                    s-110.4,0-110.4,0l-32.5,26.5l-162.8-16l-24.5,21.2c0,0-327.5,0-389.4,0c-64.8,0-103.1-45.4-103.1-112.1
+                    C202.8,357.9,260.7,340.2,313.7,340.2z"/>
+                <path id="t-island-middle" class="st0" d="M314.6,652.1c0,0,327.6-1.1,362.9,0c30.4,1,60.8,9.8,87.3,19.6
+                    c26.5,9.8,58.9,21.6,81.4,17.7c22.6-3.9,154.1-26.5,170.7-29.4c16.7-2.9,19.9,4.7,21.2,11.2c1.4,6.5,2.3,16.3-12.5,19
+                    c-17.8,3.3-155.9,29.6-155.9,29.6s-12.8,2.9-26.5,2.9c-26.5,0-525.8-2-525.8-2s-32.4,1-32.2-33.4
+                    C285.5,652.1,314.6,652.1,314.6,652.1z"/>
+                <path id="t-curb-buttom" class="st0" d="M0,523.3h95.5
+                    c15.2,0,16.2,8.7,16.2,12.9s-0.2,54.5-0.2,165.3c0,78.2,27,185,162,182.2c123.6-2.6,774.1,0,809.4,0c30.3,0,30.3,24.5,30.3,38.3
+                    s0,101.5,0,101.5H0L0,523.3z"/>
+                <path id="bus-g" class="st1" d="M437.4,584.6H295.2c-2.7,0-4.9-2.2-4.9-4.9v-22.6c0-2.7,2.2-4.9,4.9-4.9h142.3
+                    c2.7,0,4.9,2.2,4.9,4.9v22.6C442.3,582.4,440.1,584.6,437.4,584.6z"/>
+                <path id="bus-b" class="st1" d="M621.8,584.6H479.5c-2.7,0-4.9-2.2-4.9-4.9v-22.6c0-2.7,2.2-4.9,4.9-4.9h142.3
+                    c2.7,0,4.9,2.2,4.9,4.9v22.6C626.7,582.4,624.5,584.6,621.8,584.6z"/>
+                <path id="bus-p" class="st1" d="M1026.7,334.4H884.4c-2.7,0-4.9-2.2-4.9-4.9
+                    v-22.6c0-2.7,2.2-4.9,4.9-4.9h142.3c2.7,0,4.9,2.2,4.9,4.9v22.6C1031.6,332.3,1029.4,334.4,1026.7,334.4z"/>
+                <path id="bus-z" class="st1" d="M510.9,334.4H368.6c-2.7,0-4.9-2.2-4.9-4.9v-22.6c0-2.7,2.2-4.9,4.9-4.9h142.3
+                    c2.7,0,4.9,2.2,4.9,4.9v22.6C515.7,332.3,513.6,334.4,510.9,334.4z"/>
+                <path id="bus-p" class="st1" d="M847.9,334.7L706,324.3c-2.7-0.2-4.7-2.5-4.5-5.2l1.6-22.5c0.2-2.7,2.5-4.7,5.2-4.5l141.9,10.4
+                    c2.7,0.2,4.7,2.5,4.5,5.2l-1.6,22.5C852.9,332.9,850.6,334.9,847.9,334.7z"/>
+                <path id="bus-e" class="st1" d="M1034.6,728.3L895,755.8c-2.6,0.5-5.2-1.2-5.7-3.8l-4.4-22.2c-0.5-2.6,1.2-5.2,3.8-5.7l139.6-27.5
+                    c2.6-0.5,5.2,1.2,5.7,3.8l4.4,22.2C1039,725.2,1037.2,727.7,1034.6,728.3z"/>
+                <path id="bus-m" class="st1" d="M464.9,765H322.7c-2.7,0-4.9-2.2-4.9-4.9v-22.6c0-2.7,2.2-4.9,4.9-4.9h142.3c2.7,0,4.9,2.2,4.9,4.9
+                    v22.6C469.8,762.8,467.6,765,464.9,765z"/>
+                <path id="bus-k" class="st1" d="M643.6,768L501.4,762c-2.7-0.1-4.8-2.4-4.7-5.1l0.9-22.6c0.1-2.7,2.4-4.8,5.1-4.7l142.2,5.9
+                    c2.7,0.1,4.8,2.4,4.7,5.1l-0.9,22.6C648.6,766,646.3,768.1,643.6,768z"/>
+                <path id="bus-trip-1" class="st1" d="M377.5,873.8H235.2
+                    c-2.7,0-4.9-2.2-4.9-4.9v-22.6c0-2.7,2.2-4.9,4.9-4.9h142.3c2.7,0,4.9,2.2,4.9,4.9V869C382.3,871.7,380.1,873.8,377.5,873.8z"/>
+                <path id="bus-trip-2" class="st1" d="M570,873.8H427.7c-2.7,0-4.9-2.2-4.9-4.9
+                    v-22.6c0-2.7,2.2-4.9,4.9-4.9H570c2.7,0,4.9,2.2,4.9,4.9V869C574.9,871.7,572.7,873.8,570,873.8z"/>
+                <path id="bus-trip-3" class="st1" d="M830.7,875.8H688.4c-2.7,0-4.9-2.2-4.9-4.9v-22.6c0-2.7,2.2-4.9,4.9-4.9h142.3
+                    c2.7,0,4.9,2.2,4.9,4.9V871C835.6,873.7,833.4,875.8,830.7,875.8z"/>
+                <path id="t-curb-right" class="st0" d="M1365.5,373.6
+                    c-100,0-166,33.9-166,141.9c0,124.6,0,507.9,0,507.9H1366L1365.5,373.6z"/>
+                <path id="t-curb-top" class="st0" d="M0,467.7h113.8
+                    c0-151.2,8.7-235.2,201.7-235.2c141.7,0,744-0.2,744-0.2c123,0,133.7-59.3,133.7-59.3c14.3-47.5-15.7-76.5-36.7-114.5
+                    S1143-0.4,1143-0.4H0L0,467.7z"/>
             </svg>
+            </div>
         </div>
-        
+        <article>
+            <section id="one" class="on-focus">
+                <figure>
+                    <img src="" alt="">
+                    <figcaption></figcaption>
+                </figure>
+                <h2>B&G Line</h2>
+                <p></p>
+            </section>
+            <section id="two" class="on-focus">
+                <figure>
+                    <img src="" alt="">
+                    <figcaption></figcaption>
+                </figure>
+                <h2>B&G Line</h2>
+                <p></p>
+            </section>
+            <section id="three" class="on-focus">
+                <figure>
+                    <img src="" alt="">
+                    <figcaption></figcaption>
+                </figure>
+                <h2>B&G Line</h2>
+                <p></p>
+            </section>
+            <section id="four" class="on-focus">
+                <figure>
+                    <img src="" alt="">
+                    <figcaption></figcaption>
+                </figure>
+                <h2>B&G Line</h2>
+                <p></p>
+            </section>
+            <section id="five" class="on-focus">
+                <figure>
+                    <img src="" alt="">
+                    <figcaption></figcaption>
+                </figure>
+                <h2>B&G Line</h2>
+                <p></p>
+            </section>
+            <section id="six" class="on-focus">
+                <figure>
+                    <img src="" alt="">
+                    <figcaption></figcaption>
+                </figure>
+                <h2>B&G Line</h2>
+                <p></p>
+            </section>
 
-
-
-    </div>
+            
+        </article>
+    </main>
+    <div id="bkg" class="cls-0"></div>
 </body>
 </html>
